# MLOPS-Project-ChancellaLTK

./: .gitignore  Dockerfile  README.md  mlflow.db  modele.py  projet_mlops_chancella.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
mlruns_2/0/: meta.yaml
src/: .gitignore  api.py  app_streamlit.py  features.py  modele.py
src/mlartifacts/0/4a50c946c09841418089f5e9353f97c9/artifacts/RandomForest/: MLmodel  conda.yaml  requirements.txt
tests/: test_api.py
