[tool.poetry]
name = "mlops-project-chancellaltk"
version = "0.1.0"
description = "Projet MLOPS"
authors = ["Chancella Litoko"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }] 

[tool.poetry.dependencies]
python = "3.12.2"
mlflow = "^2.18.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
streamlit = "^1.41.1"
pytest = "^8.3.4"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
